Related: tdf#94319 Revert "tdf#63956 clip 19km long line to some sane limit"

This reverts commit d1046e7c3f66e5f3384ee1ef534ef28346702fc6.

and all its associated follow up fixes. Doesn't actually have any effect
on the issue which isolated it as a source of the problem which has
mutated in the meantime

Revert "tdf#126184 Use max paper dimensions to calculate clip region"

This reverts commit 1dccd6814f1fe7a06f3168d01d18d347269cd3c1.

and:

Revert "Resolves: tdf#101187 colossal page width wraps around if doubled"

This reverts commit 2fd88ab1cbb4690a770ca2ca5d66157ec4906a2e.

and:

Revert "Resolves: tdf#98366 paste document has 10x10 sized SdPages..."

This reverts commit 93efd7ebbad293d3729b8ea4b9726aff498f607f.

and:

Revert "Resolves: tdf#97276 don't clip out line if the underlying page size is unknown"

This reverts commit ad99c633908f7c70d06812ebfb4e0696666f0158.

Change-Id: I22d3e1592c172f137fcec8085ff3240428f0d248
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148170
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>